[package]
name = "css_lint"
version = "0.0.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false

[dependencies]
csskit_ast = { workspace = true }
css_ast = { workspace = true }
css_parse = { workspace = true }

bumpalo = { workspace = true, features = ["collections", "boxed"] }

[target.'cfg(target_family = "unix")'.dev-dependencies]
pprof = { workspace = true, features = ["flamegraph", "criterion"] }

[features]
default = []
serde = ["csskit_ast/serde", "css_ast/serde", "css_parse/serde"]
