[package]
name = "csskit_derives"
version = "0.0.1"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
bench = false
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
itertools = { workspace = true }
heck = { workspace = true }

[features]
default = []
